update the node version

--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "ddm djjkjd",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "engines": {
+    "node": "10.14.1"
   },
+  "scripts": {
+    "start": "node index.js"
+  },  
   "author": "",
   "license": "ISC",
   "dependencies": {
